# ros2_welding_demo

./: README.md
Universal_Robots_ROS2_Description/config/ur5/: visual_parameters.yaml
Universal_Robots_ROS2_Description/config/ur5e/: visual_parameters.yaml
Universal_Robots_ROS2_Description/urdf/: ur_macro.xacro
Universal_Robots_ROS2_Driver/ur_bringup/launch/: ur_moveit.launch.py
pointcloud_tools/: CMakeLists.txt  package.xml
pointcloud_tools/launch/: welder.launch.py
pointcloud_tools/src/: pointcloud_publisher.cpp  pointcloud_saver.cpp  pointcloud_selection.cpp
realsense-ros/realsense2_camera/include/: constants.h
realsense-ros/realsense2_camera/src/: base_realsense_node.cpp
run_moveit_cpp/: CMakeLists.txt  package.xml
run_moveit_cpp/launch/: demo.launch.py
run_moveit_cpp/src/: run_moveit_cpp.cpp  run_moveit_cpp.hpp
welder_custom_plugins/: CMakeLists.txt  package.xml  plugins_description.xml
welder_custom_plugins/src/: welder_panel.cpp  welder_panel.hpp
