<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>welder_dashboard</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="taaniel.kyla@gmail.com">taaniel</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz_ogre_vendor</build_depend>

  <build_export_depend>rviz_ogre_vendor</build_export_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>rviz_ogre_vendor</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>ignition_math6_vendor</depend>
  <depend>image_transport</depend>
  <depend>interactive_markers</depend>
  <depend>laser_geometry</depend>
  <depend>nav_msgs</depend>
  <depend>map_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>resource_retriever</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
